--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -68,24 +68,37 @@
     "\n",
     "En multipliant par $u$ l’équation volumique et en intégrant par parties sur le domaine $\\Omega _L$, on a \n",
     "$$\n",
-    "\\int _\\Omega (\\bar u \\Delta u + \\omega^2 \\rho \\bar u u) d \\Omega=0 .\n",
+    "\\int _{\\Omega _L} (\\Delta u + \\omega^2 \\rho  u) d \\Omega=0 .\n",
     "$$\n",
     "En utilisant l'intergration par parties\n",
-    "$$ \\int _\\Omega \\bar u \\Delta ud \\Omega =  \\int _\\Omega \\nabla \\cdot (\\bar u\\nabla u)d \\Omega- \\int _\\Omega \\nabla \\bar u\\nabla ud \\Omega,$$\n",
+    "$$ \\int _{\\Omega _L} \\bar u \\Delta ud \\Omega =  \\int _{\\Omega _L} \\nabla \\cdot (\\bar u\\nabla u)d \\Omega- \\int _{\\Omega _L} \\nabla \\bar u\\nabla ud \\Omega,$$\n",
     "et la formule de stokes:\n",
-    "$$\\int _\\Omega \\nabla \\cdot (\\bar u\\nabla u)d \\Omega=\\bar u\\nabla u|_{\\partial \\Omega}, $$\n",
+    "$$\\int _{\\Omega _L} \\nabla \\cdot (\\bar u\\nabla u)d \\Omega=\\bar u\\nabla u|_{\\partial \\Omega_L}, $$\n",
     "on a:\n",
-    "$$\\int _\\Omega (\\nabla \\bar u \\cdot \\nabla u - \\omega^2 \\rho \\bar u u) d \\Omega= \\bar u\\nabla u|_{\\partial \\Omega}.$$\n",
+    "$$\\int _{\\Omega _L} (\\nabla \\bar u \\cdot \\nabla u - \\omega^2 \\rho \\bar u u) d \\Omega= \\bar u\\nabla u|_{\\partial \\Omega}.$$\n",
     "\n",
     "on a $u=u_i+u_s$, dans l'integration de la direction $y$, en notisant que \n",
     "$$u=\\sum _{n \\in \\mathbb N} u_n e^{\\mp \\sqrt{(n\\pi)^2 - \\omega^2} x} \\cos(n\\pi y)$$ \n",
     "et donc,\n",
     "$$\\bar u = u.$$ \n",
     "Par la periodicité dans la direction $y$, on a\n",
-    "$$\\int _\\Omega ( (\\nabla u)^2 -\\omega^2 \\rho u^2) d \\Omega=\\bar u\\nabla u|_{\\partial \\Omega}.$$\n",
+    "$$\\int _{\\Omega _L} ( (\\nabla u)^2 -\\omega^2 \\rho u^2) d \\Omega=\\bar u\\nabla u|_{\\partial \\Omega}.$$\n",
     "\n",
     "soit $s_\\pm=s^\\pm e^{\\pm i\\omega x} $,par la periodicité on a:\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 3\n",
+    "Par la périodicité et ma parité de la fonction $cos(n\\pi y)$, on a les résultats par la calculation directe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
