--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -70,14 +70,68 @@
     "$$\n",
     "\\int _{\\Omega _L} (\\Delta u + \\omega^2 \\rho  u) d \\Omega=0 .\n",
     "$$\n",
-    "En utilisant l'intergration par parties\n",
+    "En utilisant l'intergration par parties, on a\n",
     "$$ \\int _{\\Omega _L} \\bar u \\Delta ud \\Omega =  \\int _{\\Omega _L} \\nabla \\cdot (\\bar u\\nabla u)d \\Omega- \\int _{\\Omega _L} \\nabla \\bar u\\nabla ud \\Omega,$$\n",
-    "et la formule de stokes:\n",
-    "$$\\int _{\\Omega _L} \\nabla \\cdot (\\bar u\\nabla u)d \\Omega=\\bar u\\nabla u|_{\\partial \\Omega_L}, $$\n",
+    "et\n",
+    "$$ \\int _{\\Omega _L}  u \\Delta \\bar ud \\Omega =  \\int _{\\Omega _L} \\nabla \\cdot ( u\\nabla\\bar u)d \\Omega- \\int _{\\Omega _L} \\nabla  u\\nabla\\bar u d \\Omega.$$\n",
+    "Par la formule de stokes, on a\n",
+    "$$\\int _{\\Omega _L} \\nabla \\cdot (\\bar u\\nabla u)d \\Omega=\\int _{\\partial \\Omega _L} \\bar u\\nabla u, $$\n",
+    "et\n",
+    "$$\\int _{\\Omega _L} \\nabla \\cdot (u\\nabla\\bar  u)d \\Omega= \\int _{\\partial \\Omega _L} u\\nabla\\bar  u.$$\n",
+    "Donc,\n",
+    "$$ \\int _{\\Omega _L} (\\bar u \\Delta u-u \\Delta \\bar u)d \\Omega =  \\int _{\\partial \\Omega _L} (\\bar u\\nabla u-u\\nabla\\bar u)d \\Omega,$$\n",
+    "par $\\Delta u + \\omega^2 \\rho  u=0$  et $\\Delta\\bar u + \\omega^2 \\rho  \\bar u=0$\n",
     "on a:\n",
-    "$$\\int _{\\Omega _L} (\\nabla \\bar u \\cdot \\nabla u - \\omega^2 \\rho \\bar u u) d \\Omega= \\bar u\\nabla u|_{\\partial \\Omega}.$$\n",
+    "$$\\int _{\\partial \\Omega _L} (\\bar u\\nabla u-u\\nabla\\bar u)d \\Omega=0.$$\n",
+    "Par la continuté de $u$ et $\\partial _y u=0$, on a\n",
+    "$$(\\bar u\\nabla u-u\\nabla\\bar u)|_{x=L}-(\\bar u\\nabla u-u\\nabla\\bar u)|_{x=-L}=0. $$\n",
     "\n",
-    "\n"
+    "On voit que\n",
+    "$$u=s^\\pm e^{\\pm i\\omega x}+\\sum_{n=1}^{\\infty}\\alpha_n^\\pm v^\\pm + e^{i\\omega x}$$\n",
+    "Soit \n",
+    "$$ P:=s^\\pm e^{\\pm i\\omega x} + e^{i\\omega x}, $$ \n",
+    "$$Q:=\\sum_{n=1}^{\\infty}\\alpha_n^\\pm v^\\pm,$$\n",
+    "avec $\\bar Q= Q$, $u=P+Q$. \n",
+    "\n",
+    "Et par la périodicité dans l'integration tous les terms avec $Q$ deviens null. On a donc\n",
+    "\n",
+    "$$(\\bar P \\nabla P-P\\nabla\\bar P)|_{x=L}-(\\bar P\\nabla P-P\\nabla\\bar P)|_{x=-L}=0. $$\n",
+    "\n",
+    "On voit que\n",
+    "$$\\bar P=\\bar{s^\\pm} e^{\\mp i\\omega x}+ e^{-i\\omega x}$$\n",
+    "\n",
+    "et \n",
+    "$$\\nabla P=\\pm i\\omega \\bar{s^\\pm}e^{\\pm i\\omega x} + i\\omega e^{i\\omega x}$$\n",
+    "$$\\nabla \\bar P=\\mp i\\omega  \\bar{s^\\pm}e^{\\mp i\\omega x}-i\\omega e^{-i\\omega x}.$$\n",
+    "\n",
+    "On voit que \n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\bar P \\nabla P-P\\nabla\\bar P= (s^\\pm e^{\\mp i\\omega x}+ e^{-i\\omega x})(\\pm i\\omega \\bar s^\\pm e^{\\pm i\\omega x} + i\\omega e^{i\\omega x})-(s^\\pm e^{\\pm i\\omega x} + e^{i\\omega x})(\\mp i\\omega  \\bar s^\\pm e^{\\mp i\\omega x}-i\\omega e^{-i\\omega x}) \\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "0=(\\bar P \\nabla P-P\\nabla\\bar P)|_{x=L}-&(\\bar P\\nabla P-P\\nabla\\bar P)|_{x=-L}=\\\\\n",
+    "   &=(s^+ e^{- i\\omega L} + e^{-i\\omega L})(+ i\\omega \\bar{s^+} e^{+ i\\omega L} + i\\omega e^{i\\omega L})\\\\\n",
+    "    &-(\\bar{s^+}e^{+ i\\omega L} + e^{i\\omega L})(- i\\omega  s^+ e^{- i\\omega L}-i\\omega e^{-i\\omega L})\\\\\n",
+    "    &-(s^- e^{-i\\omega L}+ e^{i\\omega L})(- i\\omega \\bar{s^-} e^{ i\\omega L} + i\\omega e^{-i\\omega L})\\\\\n",
+    "    &+(\\bar{s^-} e^{i\\omega L} + e^{-i\\omega L})( i\\omega  s^- e^{- i\\omega L}-i\\omega e^{i\\omega L})\\\\\n",
+    "   &=(s^+  +1)(\\bar{s^+}  + 1)+(s^+  + 1)(   \\bar{s^+}  + 1)\\\\\n",
+    "    &+(s^- e^{- i\\omega L}+ e^{i\\omega L})( \\bar{s^-} e^{ i\\omega L} -  e^{-i\\omega L})\\\\\n",
+    "    &+(\\bar{s^-} e^{ i\\omega L} + e^{-i\\omega L})( s^- e^{- i\\omega L}- e^{i\\omega L})\\\\\n",
+    "    &=2(s^+  +1)(\\bar{s^+}  + 1)\\\\\n",
+    "    &+s^- \\bar{s^-} -s^- e^{- 2i\\omega L}+ \\bar{s^-} e^{ 2i\\omega L} -1 \\\\\n",
+    "    &+s^- \\bar{s^-} -\\bar{s^-} e^{ 2i\\omega L}+ s^- e^{ -2i\\omega L} -1\\\\\n",
+    "    &=2s^+ \\bar{s^+} + 2s^+ + 2\\bar{s^+} + 2s^- \\bar{s^-} \\\\\n",
+    "    &=(T-1) (\\bar{T}-1)  + (T-1) + (\\bar{T}-1) + |R|^2 \\\\\n",
+    "    &=|T|^2-1 + |R|^2 \\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Donc on a \n",
+    "$$1=|T|^2 + |R|^2 $$"
    ]
   },
   {
