--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -113,17 +113,11 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "0=(\\bar P \\nabla P-P\\nabla\\bar P)|_{x=L}-&(\\bar P\\nabla P-P\\nabla\\bar P)|_{x=-L}=\\\\\n",
-    "   &=(s^+ e^{- i\\omega L} + e^{-i\\omega L})(+ i\\omega \\bar{s^+} e^{+ i\\omega L} + i\\omega e^{i\\omega L})\\\\\n",
-    "    &-(\\bar{s^+}e^{+ i\\omega L} + e^{i\\omega L})(- i\\omega  s^+ e^{- i\\omega L}-i\\omega e^{-i\\omega L})\\\\\n",
-    "    &-(s^- e^{-i\\omega L}+ e^{i\\omega L})(- i\\omega \\bar{s^-} e^{ i\\omega L} + i\\omega e^{-i\\omega L})\\\\\n",
-    "    &+(\\bar{s^-} e^{i\\omega L} + e^{-i\\omega L})( i\\omega  s^- e^{- i\\omega L}-i\\omega e^{i\\omega L})\\\\\n",
-    "   &=(s^+  +1)(\\bar{s^+}  + 1)+(s^+  + 1)(   \\bar{s^+}  + 1)\\\\\n",
-    "    &+(s^- e^{- i\\omega L}+ e^{i\\omega L})( \\bar{s^-} e^{ i\\omega L} -  e^{-i\\omega L})\\\\\n",
-    "    &+(\\bar{s^-} e^{ i\\omega L} + e^{-i\\omega L})( s^- e^{- i\\omega L}- e^{i\\omega L})\\\\\n",
-    "    &=2(s^+  +1)(\\bar{s^+}  + 1)\\\\\n",
-    "    &+s^- \\bar{s^-} -s^- e^{- 2i\\omega L}+ \\bar{s^-} e^{ 2i\\omega L} -1 \\\\\n",
-    "    &+s^- \\bar{s^-} -\\bar{s^-} e^{ 2i\\omega L}+ s^- e^{ -2i\\omega L} -1\\\\\n",
+    "0&=(\\bar P \\nabla P-P\\nabla\\bar P)|_{x=L}-(\\bar P\\nabla P-P\\nabla\\bar P)|_{x=-L}\\\\\n",
+    "   &=(s^+ e^{- i\\omega L} + e^{-i\\omega L})(+ i\\omega \\bar{s^+} e^{+ i\\omega L} + i\\omega e^{i\\omega L})-(\\bar{s^+}e^{+ i\\omega L} + e^{i\\omega L})(- i\\omega  s^+ e^{- i\\omega L}-i\\omega e^{-i\\omega L})\\\\\n",
+    "    &-(s^- e^{-i\\omega L}+ e^{i\\omega L})(- i\\omega \\bar{s^-} e^{ i\\omega L} + i\\omega e^{-i\\omega L})+(\\bar{s^-} e^{i\\omega L} + e^{-i\\omega L})( i\\omega  s^- e^{- i\\omega L}-i\\omega e^{i\\omega L})\\\\\n",
+    "   &=(s^+  +1)(\\bar{s^+}  + 1)+(s^+  + 1)(   \\bar{s^+}  + 1)+(s^- e^{- i\\omega L}+ e^{i\\omega L})( \\bar{s^-} e^{ i\\omega L} -  e^{-i\\omega L})+(\\bar{s^-} e^{ i\\omega L} + e^{-i\\omega L})( s^- e^{- i\\omega L}- e^{i\\omega L})\\\\\n",
+    "    &=2(s^+  +1)(\\bar{s^+}  + 1)+s^- \\bar{s^-} -s^- e^{- 2i\\omega L}+ \\bar{s^-} e^{ 2i\\omega L} -1 +s^- \\bar{s^-} -\\bar{s^-} e^{ 2i\\omega L}+ s^- e^{ -2i\\omega L} -1\\\\\n",
     "    &=2s^+ \\bar{s^+} + 2s^+ + 2\\bar{s^+} + 2s^- \\bar{s^-} \\\\\n",
     "    &=(T-1) (\\bar{T}-1)  + (T-1) + (\\bar{T}-1) + |R|^2 \\\\\n",
     "    &=|T|^2-1 + |R|^2 \\\\\n",
@@ -131,7 +125,7 @@
     "$$\n",
     "\n",
     "Donc on a \n",
-    "$$1=|T|^2 + |R|^2 $$"
+    "$$  |R|^2 +|T|^2=1$$"
    ]
   },
   {
