--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -89,7 +89,7 @@
     "On voit que\n",
     "$$u=s^\\pm e^{\\pm i\\omega x}+\\sum_{n=1}^{\\infty}\\alpha_n^\\pm v^\\pm + e^{i\\omega x}$$\n",
     "Soit \n",
-    "$$ P:=s^\\pm e^{\\pm i\\omega x} + e^{i\\omega x}, $$ \n",
+    "$$P:=s^\\pm e^{\\pm i\\omega x} + e^{i\\omega x}, $$ \n",
     "$$Q:=\\sum_{n=1}^{\\infty}\\alpha_n^\\pm v^\\pm,$$\n",
     "avec $\\bar Q= Q$, $u=P+Q$. \n",
     "\n",
@@ -133,7 +133,23 @@
    "metadata": {},
    "source": [
     "## Question 3\n",
-    "Par la périodicité et ma parité de la fonction $cos(n\\pi y)$, on a les résultats par la calculation directe."
+    "Par la périodicité et ma parité de la fonction $cos(n\\pi y)$, on a les résultats par la calculation directe:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "R&=\\int_{\\{-L\\}\\times(0;1)}u_s(z)e^{-i\\omega L}dy\\\\\n",
+    "&=\\int_{\\{-L\\}\\times(0;1)}(s^- e^{ i\\omega L}+\\sum_{n=1}^{\\infty}\\alpha_n^- v^-)e^{-i\\omega L}dy\\\\\n",
+    "&=s^-,\\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "et\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "T&=\\int_{\\{L\\}\\times(0;1)}u(z)e^{-i\\omega L}dy\\\\\n",
+    "&=\\int_{\\{L\\}\\times(0;1)}(s^+ e^{ i\\omega L}+\\sum_{n=1}^{\\infty}\\alpha_n^+ v^+ + e^{i\\omega L})e^{-i\\omega L}dy\\\\\n",
+    "&=s^++1.\\\\\n",
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
