--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -155,7 +155,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Question 4\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "I^\\pm&=\\int_{\\Sigma_L}e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial n}(\\frac{u_s(z)}{e^{\\mp i\\omega x}})dy\\\\\n",
+    "&=\\int_{\\{-L\\}\\times(0;1)}-e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial x}(\\frac{s^- e^{- i\\omega x}+\\sum_{n=1}^{\\infty}\\alpha_n^- v^- }{e^{\\mp i\\omega x}})dy+\\int_{\\{L\\}\\times(0;1)}e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial x}(\\frac{s^+ e^{+ i\\omega x}+\\sum_{n=1}^{\\infty}\\alpha_n^+ v^+ }{e^{\\mp i\\omega x}})dy\\\\\n",
+    "&=-e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial x}(\\frac{s^- e^{- i\\omega x} }{e^{\\mp i\\omega x}})|_{x=-L}+e^{2\\mp i\\omega x}\\frac{\\partial}{\\partial x}(\\frac{s^+ e^{+ i\\omega x}}{e^{\\mp i\\omega x}}) |_{x=L}\\\\\n",
+    "&=-s^-e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial x} e^{(\\pm 1-1) i\\omega x}|_{x=-L}+s^+e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial x}e^{ (1\\pm 1)i\\omega x} |_{x=L}\\\\\n",
+    "&=-s^-e^{\\mp 2i\\omega x}((\\pm 1-1) i\\omega) e^{(\\pm 1-1) i\\omega x}|_{x=-L}+s^+e^{\\mp 2i\\omega x}(1\\pm 1)i \\omega e^{ (1\\pm 1)i\\omega x} |_{x=L}\\\\\n",
+    "&=s^-(1 \\mp 1) i\\omega e^{i\\omega L}+s^+(1\\pm 1)i \\omega e^{i\\omega L} \\\\\n",
+    "\n",
+    "\\end{align}\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
