--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -165,10 +165,14 @@
     "&=-e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial x}(\\frac{s^- e^{- i\\omega x} }{e^{\\mp i\\omega x}})|_{x=-L}+e^{2\\mp i\\omega x}\\frac{\\partial}{\\partial x}(\\frac{s^+ e^{+ i\\omega x}}{e^{\\mp i\\omega x}}) |_{x=L}\\\\\n",
     "&=-s^-e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial x} e^{(\\pm 1-1) i\\omega x}|_{x=-L}+s^+e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial x}e^{ (1\\pm 1)i\\omega x} |_{x=L}\\\\\n",
     "&=-s^-e^{\\mp 2i\\omega x}((\\pm 1-1) i\\omega) e^{(\\pm 1-1) i\\omega x}|_{x=-L}+s^+e^{\\mp 2i\\omega x}(1\\pm 1)i \\omega e^{ (1\\pm 1)i\\omega x} |_{x=L}\\\\\n",
-    "&=s^-(1 \\mp 1) i\\omega e^{i\\omega L}+s^+(1\\pm 1)i \\omega e^{i\\omega L} \\\\\n",
+    "&=s^-(1 \\mp 1) i\\omega e^{i(1\\mp 3)\\omega L}+s^+(1\\pm 1)i \\omega e^{i(1\\mp 1)\\omega L} \\\\\n",
     "\n",
     "\\end{align}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "Donc \n",
+    "$$I^+=s^+ 2i \\omega$$\n",
+    "$$I^-=s^- 2i \\omega e^{-2i\\omega L}$$"
    ]
   }
  ],
