--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -101,22 +101,22 @@
     "$$\\bar P=\\bar{s^\\pm} e^{\\mp i\\omega x}+ e^{-i\\omega x}$$\n",
     "\n",
     "et \n",
-    "$$\\nabla P=\\pm i\\omega \\bar{s^\\pm}e^{\\pm i\\omega x} + i\\omega e^{i\\omega x}$$\n",
+    "$$\\nabla P=\\pm i\\omega s^\\pm e^{\\pm i\\omega x} + i\\omega e^{i\\omega x}$$\n",
     "$$\\nabla \\bar P=\\mp i\\omega  \\bar{s^\\pm}e^{\\mp i\\omega x}-i\\omega e^{-i\\omega x}.$$\n",
     "\n",
     "On voit que \n",
     "$$\n",
     "\\begin{align}\n",
-    "\\bar P \\nabla P-P\\nabla\\bar P= (s^\\pm e^{\\mp i\\omega x}+ e^{-i\\omega x})(\\pm i\\omega \\bar s^\\pm e^{\\pm i\\omega x} + i\\omega e^{i\\omega x})-(s^\\pm e^{\\pm i\\omega x} + e^{i\\omega x})(\\mp i\\omega  \\bar s^\\pm e^{\\mp i\\omega x}-i\\omega e^{-i\\omega x}) \\\\\n",
+    "\\bar P \\nabla P-P\\nabla\\bar P= (s^\\pm e^{\\mp i\\omega x}+ e^{-i\\omega x})(\\pm i\\omega s^\\pm e^{\\pm i\\omega x} + i\\omega e^{i\\omega x})-(s^\\pm e^{\\pm i\\omega x} + e^{i\\omega x})(\\mp i\\omega  \\bar{s^\\pm}e^{\\mp i\\omega x}-i\\omega e^{-i\\omega x}) \\\\\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
     "0&=(\\bar P \\nabla P-P\\nabla\\bar P)|_{x=L}-(\\bar P\\nabla P-P\\nabla\\bar P)|_{x=-L}\\\\\n",
-    "   &=(s^+ e^{- i\\omega L} + e^{-i\\omega L})(+ i\\omega \\bar{s^+} e^{+ i\\omega L} + i\\omega e^{i\\omega L})-(\\bar{s^+}e^{+ i\\omega L} + e^{i\\omega L})(- i\\omega  s^+ e^{- i\\omega L}-i\\omega e^{-i\\omega L})\\\\\n",
-    "    &-(s^- e^{-i\\omega L}+ e^{i\\omega L})(- i\\omega \\bar{s^-} e^{ i\\omega L} + i\\omega e^{-i\\omega L})+(\\bar{s^-} e^{i\\omega L} + e^{-i\\omega L})( i\\omega  s^- e^{- i\\omega L}-i\\omega e^{i\\omega L})\\\\\n",
-    "   &=(s^+  +1)(\\bar{s^+}  + 1)+(s^+  + 1)(   \\bar{s^+}  + 1)+(s^- e^{- i\\omega L}+ e^{i\\omega L})( \\bar{s^-} e^{ i\\omega L} -  e^{-i\\omega L})+(\\bar{s^-} e^{ i\\omega L} + e^{-i\\omega L})( s^- e^{- i\\omega L}- e^{i\\omega L})\\\\\n",
+    "   &=(\\bar{s^+} e^{- i\\omega L} + e^{-i\\omega L})(+ i\\omega s^+ e^{+ i\\omega L} + i\\omega e^{i\\omega L})-(s^+e^{+ i\\omega L} + e^{i\\omega L})(- i\\omega  \\bar{s^+} e^{- i\\omega L}-i\\omega e^{-i\\omega L})\\\\\n",
+    "    &-(\\bar{s^-} e^{-i\\omega L}+ e^{i\\omega L})(- i\\omega s^- e^{ i\\omega L} + i\\omega e^{-i\\omega L})+(s^- e^{i\\omega L} + e^{-i\\omega L})( i\\omega  \\bar{s^-} e^{- i\\omega L}-i\\omega e^{i\\omega L})\\\\\n",
+    "   &=(\\bar{s^+}  + 1)(s^+  +1)+(s^+  + 1)(   \\bar{s^+}  + 1)+(\\bar{s^-} e^{ i\\omega L} + e^{-i\\omega L})( s^- e^{- i\\omega L}- e^{i\\omega L})+(s^- e^{- i\\omega L}+ e^{i\\omega L})( \\bar{s^-} e^{ i\\omega L} -  e^{-i\\omega L})\\\\\n",
     "    &=2(s^+  +1)(\\bar{s^+}  + 1)+s^- \\bar{s^-} -s^- e^{- 2i\\omega L}+ \\bar{s^-} e^{ 2i\\omega L} -1 +s^- \\bar{s^-} -\\bar{s^-} e^{ 2i\\omega L}+ s^- e^{ -2i\\omega L} -1\\\\\n",
     "    &=2s^+ \\bar{s^+} + 2s^+ + 2\\bar{s^+} + 2s^- \\bar{s^-} \\\\\n",
     "    &=(T-1) (\\bar{T}-1)  + (T-1) + (\\bar{T}-1) + |R|^2 \\\\\n",
