--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -160,19 +160,20 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "I^\\pm&=\\int_{\\Sigma_L}e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial n}(\\frac{u_s(z)}{e^{\\mp i\\omega x}})dy\\\\\n",
-    "&=\\int_{\\{-L\\}\\times(0;1)}-e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial x}(\\frac{s^- e^{- i\\omega x}+\\sum_{n=1}^{\\infty}\\alpha_n^- v^- }{e^{\\mp i\\omega x}})dy+\\int_{\\{L\\}\\times(0;1)}e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial x}(\\frac{s^+ e^{+ i\\omega x}+\\sum_{n=1}^{\\infty}\\alpha_n^+ v^+ }{e^{\\mp i\\omega x}})dy\\\\\n",
-    "&=-e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial x}(\\frac{s^- e^{- i\\omega x} }{e^{\\mp i\\omega x}})|_{x=-L}+e^{2\\mp i\\omega x}\\frac{\\partial}{\\partial x}(\\frac{s^+ e^{+ i\\omega x}}{e^{\\mp i\\omega x}}) |_{x=L}\\\\\n",
-    "&=-s^-e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial x} e^{(\\pm 1-1) i\\omega x}|_{x=-L}+s^+e^{\\mp 2i\\omega x}\\frac{\\partial}{\\partial x}e^{ (1\\pm 1)i\\omega x} |_{x=L}\\\\\n",
-    "&=-s^-e^{\\mp 2i\\omega x}((\\pm 1-1) i\\omega) e^{(\\pm 1-1) i\\omega x}|_{x=-L}+s^+e^{\\mp 2i\\omega x}(1\\pm 1)i \\omega e^{ (1\\pm 1)i\\omega x} |_{x=L}\\\\\n",
-    "&=s^-(1 \\mp 1) i\\omega e^{i(1\\mp 3)\\omega L}+s^+(1\\pm 1)i \\omega e^{i(1\\mp 1)\\omega L} \\\\\n",
+    "I^{\\pm} &= \\int_{L} \\left( \\frac{\\partial u_s(z)}{\\partial n} \\overline{e^{\\pm i \\omega x}}  - u_s(z) \\frac{\\partial \\overline{e^{\\pm i \\omega x}} }{\\partial n} \\right) dy\\\\\n",
+    "&=\\int_{\\{-L\\}\\times(0;1)}-\\frac{\\partial}{\\partial x}(s^- e^{- i\\omega x}+\\sum_{n=1}^{\\infty}\\alpha_n^- v_n^-)e^{\\mp i\\omega x}-s^- e^{- i\\omega x}(-(\\mp i\\omega)e^{\\mp i\\omega x})dy\\\\\n",
+    "&+\\int_{\\{L\\}\\times(0;1)}\\frac{\\partial}{\\partial x}(s^+ e^{+ i\\omega x}+\\sum_{n=1}^{\\infty}\\alpha_n^+ v_n^+)e^{\\mp i\\omega x}-s^+ e^{+ i\\omega x}((\\mp i\\omega)e^{\\mp i\\omega x})dy\\\\\n",
+    "&=(-\\frac{\\partial}{\\partial x}(s^- e^{- i\\omega x})e^{\\mp i\\omega x}-s^- e^{- i\\omega x}(-(\\mp i\\omega)e^{\\mp i\\omega x}))|_{x=-L}+(\\frac{\\partial}{\\partial x}(s^+ e^{+ i\\omega x})e^{\\mp i\\omega x}-s^+ e^{+ i\\omega x}((\\mp i\\omega)e^{\\mp i\\omega x}))|_{x=L}\\\\\n",
+    "&=(-(- i\\omega)(s^- e^{- i\\omega x})e^{\\mp i\\omega x}-s^- e^{- i\\omega x}(-(\\mp i\\omega)e^{\\mp i\\omega x}))|_{x=-L}+(( i\\omega)(s^+ e^{ i\\omega x})e^{\\mp i\\omega x}-s^+ e^{+ i\\omega x}((\\mp i\\omega)e^{\\mp i\\omega x}))|_{x=L}\\\\\n",
+    "&= ((1\\mp 1)i\\omega s^- e^{(-1\\mp 1 )i\\omega x})|_{x=-L}+((1 \\pm 1) i\\omega s^+ e^{(1\\mp1) i\\omega x})|_{x=L}\\\\\n",
+    "&= (1\\mp 1)i\\omega s^- e^{(1\\pm 1 )i\\omega L}+(1 \\pm 1) i\\omega s^+ e^{(1\\mp1) i\\omega L}\\\\\n",
     "\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
     "Donc \n",
-    "$$I^+=s^+ 2i \\omega$$\n",
-    "$$I^-=s^- 2i \\omega e^{-2i\\omega L}$$"
+    "$$I^+=2i\\omega s^+$$\n",
+    "$$I^-=2i\\omega s^-$$"
    ]
   }
  ],
