--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -50,7 +50,7 @@
     "Donc, finalement, on a \n",
     "$$\n",
     "\\begin{equation}\n",
-    "v^{\\pm}(x,y) = \n",
+    "v_n^{\\pm}(x,y) = \n",
     "    \\begin{cases}\n",
     "e^{\\pm i \\sqrt{\\omega^2 - (n\\pi)^2} x} \\cos(n\\pi y) & \\text{pour } n \\in \\mathbb{N}, n < \\frac{\\omega}{\\pi} \\\\\n",
     "e^{\\mp \\sqrt{(n\\pi)^2 - \\omega^2} x} \\cos(n\\pi y) & \\text{pour } n \\in \\mathbb{N}, n > \\frac{\\omega}{\\pi}\n",
@@ -158,6 +158,7 @@
    "source": [
     "## Question 4\n",
     "\n",
+    "Par la calculation directe, on a:\n",
     "$$\n",
     "\\begin{align}\n",
     "I^{\\pm} &= \\int_{L} \\left( \\frac{\\partial u_s(z)}{\\partial n} \\overline{e^{\\pm i \\omega x}}  - u_s(z) \\frac{\\partial \\overline{e^{\\pm i \\omega x}} }{\\partial n} \\right) dy\\\\\n",
@@ -175,6 +176,57 @@
     "$$I^+=2i\\omega s^+$$\n",
     "$$I^-=2i\\omega s^-$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 5\n",
+    "Une côté, on a:\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "T^{\\pm} u_s &= \\sum_{n=0}^{+\\infty} \\beta_n \\cos(n \\pi y) \\int_{\\{\\pm L\\} \\times (0,1)} u_s(z) \\cos(n \\pi y)  dy\\\\\n",
+    "&=\\sum_{n=0}^{+\\infty} \\beta_n \\cos(n \\pi y) \\int_{\\{\\pm L\\} \\times (0,1)}(s^\\pm e^{\\pm i\\omega x}+\\sum_{m=1}^{+\\infty}\\alpha_m^\\pm e^{\\mp \\sqrt{(m\\pi)^2 - \\omega^2} x} \\cos(m\\pi y) ) \\cos(n \\pi y)  dy\\\\\n",
+    "&=\\sum_{n=0}^{+\\infty} \\beta_n \\cos(n \\pi y) \\int_{\\{\\pm L\\} \\times (0,1)}(s^\\pm e^{\\pm i\\omega x}+\\sum_{m=1}^{+\\infty}\\alpha_m^\\pm e^{\\mp \\sqrt{(m\\pi)^2 - \\omega^2} x} \\cos(m\\pi y) ) \\cos(n \\pi y)  dy\\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "C'est facile à obtenir:\n",
+    "$$\\int_0^1 cos(n\\pi y)cos(m\\pi y) dy= \\frac{1}{2}\\delta_m^n$$\n",
+    "\n",
+    "Alors\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "T^{\\pm} u_s &=\\sum_{n=0}^{+\\infty} \\beta_n \\cos(n \\pi y) (s^\\pm e^{\\pm i\\omega x}\\frac{1}{2}\\delta_n^0+\\sum_{m=1}^{+\\infty}\\alpha_m^\\pm e^{\\mp \\sqrt{(m\\pi)^2 - \\omega^2} x}\\frac{1}{2}\\delta_m^n  )  \\\\\n",
+    " &= \\frac{1}{2}\\beta_0s^\\pm e^{\\pm i\\omega x}+ \\sum_{n=1}^{+\\infty} \\frac{1}{2} \\beta_n  \\alpha_n^\\pm e^{\\mp \\sqrt{(n\\pi)^2 - \\omega^2} x}\\cos(n \\pi y) \\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "L'autre côté:\n",
+    "$$\n",
+    "\\begin{align}\n",
+    " \\frac{\\partial}{\\partial n} u_s &=\\pm \\frac{\\partial}{\\partial x} (s^\\pm e^{\\pm i\\omega x}+\\sum_{n=1}^{+\\infty}\\alpha_m^\\pm e^{\\mp \\sqrt{(n\\pi)^2 - \\omega^2} x} \\cos(n\\pi y))\\\\\n",
+    "&=\\pm  (s^\\pm (\\pm i\\omega)e^{\\pm i\\omega x}+\\sum_{n=1}^{+\\infty}\\alpha_m^\\pm (\\mp \\sqrt{(n\\pi)^2 - \\omega^2})e^{\\mp \\sqrt{(n\\pi)^2 - \\omega^2} x} \\cos(n\\pi y))\\\\\n",
+    "&= s^\\pm i\\omega e^{\\pm i\\omega x}+\\sum_{n=1}^{+\\infty}\\alpha_m^\\pm (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{\\mp \\sqrt{(n\\pi)^2 - \\omega^2} x} \\cos(n\\pi y)\\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "En comparaison des coéfficients, on voit que:\n",
+    "\n",
+    "$$\\beta_0=2 i\\omega,\\beta_n=- 2\\sqrt{(n\\pi)^2 - \\omega^2}.$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
