--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -13,15 +13,15 @@
    "source": [
     "## Question 1\n",
     "\n",
-    "On utilise la methode de la sépertion des varialble: $v(x,y)=\\alpha(x)\\varphi(y)$. Avec $\\rho=1$ et $f=0$, on a\n",
+    "On utilise la methode de la sépertion des  \\bar uarialble: $ \\bar u(x,y)=\\alpha(x)\\ \\bar uarphi(y)$. Avec $\\rho=1$ et $f=0$, on a\n",
     "$$\n",
     "\\begin{align}\n",
     "-\\Delta (\\alpha(x)\\varphi(y))-\\omega^2\\alpha(x)\\varphi(y)&=0 \\\\\n",
-    "-\\frac{\\Delta \\alpha}{\\alpha}=\\omega^2+\\frac{\\Delta\\varphi}{\\varphi}&=C\n",
+    "-\\frac{\\Delta \\alpha}{\\alpha}=\\omega^2+\\frac{\\Delta\\varphi}{\\ \\bar uarphi}&=C\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "Pour la variable $y$, on a:\n",
+    "Pour la  \\bar uariable $y$, on a:\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\begin{cases}\n",
@@ -66,45 +66,45 @@
    "source": [
     "## Question 2\n",
     "\n",
-    "En multipliant par $u$ l’équation volumique et en intégrant par parties sur le domaine $\\Omega _L$, on a \n",
+    "En multipliant par $u$ l’équation  volumique et en intégrant par parties sur le domaine $\\Omega _L$, on a \n",
     "$$\n",
     "\\int _{\\Omega _L} (\\Delta u + \\omega^2 \\rho  u) d \\Omega=0 .\n",
     "$$\n",
     "En utilisant l'intergration par parties, on a\n",
-    "$$ \\int _{\\Omega _L} \\bar u \\Delta ud \\Omega =  \\int _{\\Omega _L} \\nabla \\cdot (\\bar u\\nabla u)d \\Omega- \\int _{\\Omega _L} \\nabla \\bar u\\nabla ud \\Omega,$$\n",
+    "$$ \\int _{\\Omega _L}  \\bar u \\Delta ud \\Omega =  \\int _{\\Omega _L} \\nabla \\cdot ( \\bar u\\nabla u)d \\Omega- \\int _{\\Omega _L} \\nabla  \\bar u\\nabla ud \\Omega,$$\n",
     "et\n",
-    "$$ \\int _{\\Omega _L}  u \\Delta \\bar ud \\Omega =  \\int _{\\Omega _L} \\nabla \\cdot ( u\\nabla\\bar u)d \\Omega- \\int _{\\Omega _L} \\nabla  u\\nabla\\bar u d \\Omega.$$\n",
+    "$$ \\int _{\\Omega _L}  u \\Delta  \\bar ud \\Omega =  \\int _{\\Omega _L} \\nabla \\cdot ( u\\nabla \\bar u)d \\Omega- \\int _{\\Omega _L} \\nabla  u\\nabla \\bar u d \\Omega.$$\n",
     "Par la formule de stokes, on a\n",
-    "$$\\int _{\\Omega _L} \\nabla \\cdot (\\bar u\\nabla u)d \\Omega=\\int _{\\partial \\Omega _L} \\bar u\\nabla u, $$\n",
+    "$$\\int _{\\Omega _L} \\nabla \\cdot ( \\bar u\\nabla u)d \\Omega=\\int _{\\partial \\Omega _L}  \\bar u\\nabla u, $$\n",
     "et\n",
     "$$\\int _{\\Omega _L} \\nabla \\cdot (u\\nabla\\bar  u)d \\Omega= \\int _{\\partial \\Omega _L} u\\nabla\\bar  u.$$\n",
     "Donc,\n",
-    "$$ \\int _{\\Omega _L} (\\bar u \\Delta u-u \\Delta \\bar u)d \\Omega =  \\int _{\\partial \\Omega _L} (\\bar u\\nabla u-u\\nabla\\bar u)d \\Omega,$$\n",
-    "par $\\Delta u + \\omega^2 \\rho  u=0$  et $\\Delta\\bar u + \\omega^2 \\rho  \\bar u=0$\n",
+    "$$ \\int _{\\Omega _L} ( \\bar u \\Delta u-u \\Delta  \\bar u)d \\Omega =  \\int _{\\partial \\Omega _L} ( \\bar u\\nabla u-u\\nabla \\bar u)d \\Omega,$$\n",
+    "par $\\Delta u + \\omega^2 \\rho  u=0$  et $\\Delta \\bar u + \\omega^2 \\rho   \\bar u=0$\n",
     "on a:\n",
-    "$$\\int _{\\partial \\Omega _L} (\\bar u\\nabla u-u\\nabla\\bar u)d \\Omega=0.$$\n",
+    "$$\\int _{\\partial \\Omega _L} ( \\bar u\\nabla u-u\\nabla \\bar u)d \\Omega=0.$$\n",
     "Par la continuté de $u$ et $\\partial _y u=0$, on a\n",
-    "$$(\\bar u\\nabla u-u\\nabla\\bar u)|_{x=L}-(\\bar u\\nabla u-u\\nabla\\bar u)|_{x=-L}=0. $$\n",
+    "$$( \\bar u\\nabla u-u\\nabla \\bar u)|_{x=L}-( \\bar u\\nabla u-u\\nabla \\bar u)|_{x=-L}=0. $$\n",
     "\n",
     "On voit que\n",
-    "$$u=s^\\pm e^{\\pm i\\omega x}+\\sum_{n=1}^{\\infty}\\alpha_n^\\pm v^\\pm + e^{i\\omega x}$$\n",
+    "$$u=s^\\pm e^{\\pm i\\omega x}+\\sum_{n=1}^{\\infty}\\alpha_n^\\pm  \\bar u^\\pm + e^{i\\omega x}$$\n",
     "Soit \n",
     "$$P:=s^\\pm e^{\\pm i\\omega x} + e^{i\\omega x}, $$ \n",
-    "$$Q:=\\sum_{n=1}^{\\infty}\\alpha_n^\\pm v^\\pm,$$\n",
+    "$$Q:=\\sum_{n=1}^{\\infty}\\alpha_n^\\pm  \\bar u^\\pm,$$\n",
     "avec $\\bar Q= Q$, $u=P+Q$. \n",
     "\n",
     "Et par la périodicité dans l'integration tous les terms avec $Q$ deviens null. On a donc\n",
     "\n",
     "$$(\\bar P \\nabla P-P\\nabla\\bar P)|_{x=L}-(\\bar P\\nabla P-P\\nabla\\bar P)|_{x=-L}=0. $$\n",
     "\n",
-    "On voit que\n",
+    "On  voit que\n",
     "$$\\bar P=\\bar{s^\\pm} e^{\\mp i\\omega x}+ e^{-i\\omega x}$$\n",
     "\n",
     "et \n",
     "$$\\nabla P=\\pm i\\omega s^\\pm e^{\\pm i\\omega x} + i\\omega e^{i\\omega x}$$\n",
     "$$\\nabla \\bar P=\\mp i\\omega  \\bar{s^\\pm}e^{\\mp i\\omega x}-i\\omega e^{-i\\omega x}.$$\n",
     "\n",
-    "On voit que \n",
+    "On  voit que \n",
     "$$\n",
     "\\begin{align}\n",
     "\\bar P \\nabla P-P\\nabla\\bar P= (s^\\pm e^{\\mp i\\omega x}+ e^{-i\\omega x})(\\pm i\\omega s^\\pm e^{\\pm i\\omega x} + i\\omega e^{i\\omega x})-(s^\\pm e^{\\pm i\\omega x} + e^{i\\omega x})(\\mp i\\omega  \\bar{s^\\pm}e^{\\mp i\\omega x}-i\\omega e^{-i\\omega x}) \\\\\n",
@@ -218,15 +218,63 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Question 6\n",
+    "\n",
+    "$$\n",
+    "\\int _{\\Omega _L} (\\Delta u + \\omega^2 \\rho  u) v d \\Omega=\\int _{\\Omega _L} f v d \\Omega .\n",
+    "$$\n",
+    "En utilisant l'intergration par parties, on a\n",
+    "$$ \n",
+    "\\int _{\\Omega _L} v \\Delta ud \\Omega =  \\int _{\\Omega _L} \\nabla \\cdot (v\\nabla u)d \\Omega- \\int _{\\Omega _L} \\nabla v\\nabla ud \\Omega,\n",
+    "$$\n",
+    "\n",
+    "Par la formule de stokes, on a\n",
+    "$$\\int _{\\Omega _L} \\nabla \\cdot (v\\nabla u)d \\Omega=\\int _{\\partial \\Omega _L} v\\nabla u \\cdot d\\Gamma, $$\n",
+    "\n",
+    "Donc,\n",
+    "$$ \\int _{\\Omega _L} v \\Delta ud \\Omega = \\int _{\\partial \\Omega _L} v\\nabla u \\cdot d\\Gamma- \\int _{\\Omega _L} \\nabla v\\nabla ud \\Omega,$$\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\int _{\\Omega _L} (-\\nabla v\\nabla u+ \\omega^2 \\rho  uv)  d \\Omega+\\int _{\\partial \\Omega _L} v\\nabla u  \\cdot d\\Gamma=\\int _{\\Omega _L} f v d \\Omega .\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\int _{\\Omega _L} (-\\nabla v\\nabla u+ \\omega^2 \\rho  uv)  d \\Omega+\\int _{\\Sigma_L} v\\frac{\\partial u}{\\partial n} dy =\\int _{\\Omega _L} f v d \\Omega .\n",
+    "$$\n",
+    "\n",
+    "En sachant\n",
+    "$$\\frac{\\partial u}{\\partial n}= s^\\pm i\\omega e^{\\pm i\\omega x}+\\sum_{n=1}^{+\\infty}\\alpha_m^\\pm (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{\\mp \\sqrt{(n\\pi)^2 - \\omega^2} x} \\cos(n\\pi y),\n",
+    "$$\n",
+    "on a :\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\int _{\\Sigma_L} v\\frac{\\partial u}{\\partial n} dy &=\\int _{x=L} v\\frac{\\partial u}{\\partial x} dy-\\int_{x=-L} v\\frac{\\partial u}{\\partial x} dy\\\\\n",
+    "&=\\int _{(0,1)} v(s^+ i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}\\alpha_m^+ (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)) dy-\\int_{(0,1)} v(s^-i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}\\alpha_m^- (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)) dy \\\\\n",
+    "&=\\int _{(0,1)} v((s^+-s^- )i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}(\\alpha_m^+ -\\alpha_m^-) (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)) dy\n",
+    "\\end{align}\\\\\n",
+    "$$\n",
+    "\n",
+    "soit\n",
+    "$$g=(s^+-s^- )i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}(\\alpha_m^+ -\\alpha_m^-) (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)$$\n",
+    "\n",
+    "on a\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "\\begin{cases}\n",
+    "a(u,v)=\\int _{\\Omega _L} (-\\nabla v\\nabla u+ \\omega^2 \\rho  uv)  d \\Omega\\\\\n",
+    "l(v)=\\int _{\\Omega _L} f v d \\Omega-\\int _{(0,1)} v g dy\n",
+    "\\end{cases}.\n",
+    "\\end{equation}\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
