--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -226,7 +226,7 @@
    },
    "source": [
     "## Question 6\n",
-    "\n",
+    "On voit que \n",
     "$$\n",
     "\\int _{\\Omega _L} (\\Delta u + \\omega^2 \\rho  u) v d \\Omega=\\int _{\\Omega _L} f v d \\Omega .\n",
     "$$\n",
@@ -250,27 +250,38 @@
     "\\int _{\\Omega _L} (-\\nabla v\\nabla u+ \\omega^2 \\rho  uv)  d \\Omega+\\int _{\\Sigma_L} v\\frac{\\partial u}{\\partial n} dy =\\int _{\\Omega _L} f v d \\Omega .\n",
     "$$\n",
     "\n",
-    "En sachant\n",
-    "$$\\frac{\\partial u}{\\partial n}= s^\\pm i\\omega e^{\\pm i\\omega x}+\\sum_{n=1}^{+\\infty}\\alpha_m^\\pm (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{\\mp \\sqrt{(n\\pi)^2 - \\omega^2} x} \\cos(n\\pi y),\n",
+    "En sachant que \n",
+    "$$\\frac{\\partial u_s}{\\partial n}=T^{\\pm}u_s= s^\\pm i\\omega e^{\\pm i\\omega x}+\\sum_{n=1}^{+\\infty}\\alpha_m^\\pm (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{\\mp \\sqrt{(n\\pi)^2 - \\omega^2} x} \\cos(n\\pi y),\n",
     "$$\n",
     "on a :\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\int _{\\Sigma_L} v\\frac{\\partial u}{\\partial n} dy &=\\int _{x=L} v\\frac{\\partial u}{\\partial x} dy-\\int_{x=-L} v\\frac{\\partial u}{\\partial x} dy\\\\\n",
-    "&=\\int _{(0,1)} v(s^+ i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}\\alpha_m^+ (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)) dy-\\int_{(0,1)} v(s^-i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}\\alpha_m^- (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)) dy \\\\\n",
-    "&=\\int _{(0,1)} v((s^+-s^- )i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}(\\alpha_m^+ -\\alpha_m^-) (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)) dy\n",
+    "\\int _{\\Sigma_L} v\\frac{\\partial u}{\\partial n} dy &=\\int _{x=L} v\\frac{\\partial u_s}{\\partial x} dy-\\int_{x=-L} v\\frac{\\partial u_s}{\\partial x} dy+\\int _{x=L} v\\frac{\\partial u_i}{\\partial x} dy-\\int_{x=-L} v\\frac{\\partial u_i}{\\partial x} dy\\\\\n",
+    "&=\\int _{(0,1)} v(s^+ i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}\\alpha_m^+ (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)) dy+\\int _{x=L} v i\\omega e^{i\\omega L} dy\\\\\n",
+    "&-\\int_{(0,1)} v(s^-i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}\\alpha_m^- (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)) dy -\\int_{x=-L} v i\\omega e^{-i\\omega L}dy\\\\\n",
+    "&=\\int _{(0,1)} v((s^+-s^- )i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}(\\alpha_m^+ -\\alpha_m^-) (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)+ i\\omega (e^{i\\omega L}-e^{-i\\omega L})) dy\n",
+    "\\end{align}\\\\\n",
+    "$$\n",
+    "\n",
+    "et\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\int _{\\Omega _L} (-\\nabla v\\nabla u+ \\omega^2 \\rho  uv)  d \\Omega &=\\int _{\\Omega _L} (-\\nabla v\\nabla u_s+ \\omega^2 \\rho  u_s v)  d \\Omega+\\int _{\\Omega _L} (-\\nabla v\\nabla u_i+ \\omega^2 \\rho  u_i v)  d \\Omega\\\\\n",
+    "&=\\int _{\\Omega _L} (-\\nabla v\\nabla u_s+ \\omega^2 \\rho  u_s v)  d \\Omega+\\int _{\\Omega _L} v(  \\Delta u_i+ \\omega^2 \\rho  u_i )  d \\Omega\\\\\n",
+    "&=\\int _{\\Omega _L} (-\\nabla v\\nabla u_s+ \\omega^2 \\rho  u_s v)  d \\Omega+\\int _{\\Omega _L} v( \\rho -1 )\\omega^2 e^{i\\omega x}  d \\Omega .\n",
     "\\end{align}\\\\\n",
     "$$\n",
     "\n",
     "soit\n",
-    "$$g=(s^+-s^- )i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}(\\alpha_m^+ -\\alpha_m^-) (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)$$\n",
+    "$$g(y)=\\gamma_{\\Sigma_L}(\\frac{\\partial u}{\\partial n})=(s^+-s^- )i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}(\\alpha_m^+ -\\alpha_m^-) (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y) + i\\omega (e^{i\\omega L}-e^{-i\\omega L})$$\n",
     "\n",
     "on a\n",
     "$$\n",
     "\\begin{equation}\n",
     "\\begin{cases}\n",
-    "a(u,v)=\\int _{\\Omega _L} (-\\nabla v\\nabla u+ \\omega^2 \\rho  uv)  d \\Omega\\\\\n",
-    "l(v)=\\int _{\\Omega _L} f v d \\Omega-\\int _{(0,1)} v g dy\n",
+    "a(u_s,v)=\\int _{\\Omega _L} (-\\nabla v\\nabla u_s+ \\omega^2 \\rho  u_s v)  d \\Omega\\\\\n",
+    "l(v)=\\int _{\\Omega _L} f v d \\Omega-\\int _{(0,1)} v g dy-\\int _{\\Omega _L} v( \\rho -1 )\\omega^2 e^{i\\omega x}  d \\Omega\n",
     "\\end{cases}.\n",
     "\\end{equation}\n",
     "$$"
