--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -280,11 +280,75 @@
     "$$\n",
     "\\begin{equation}\n",
     "\\begin{cases}\n",
-    "a(u_s,v)=\\int _{\\Omega _L} (-\\nabla v\\nabla u_s+ \\omega^2 \\rho  u_s v)  d \\Omega\\\\\n",
-    "l(v)=\\int _{\\Omega _L} f v d \\Omega-\\int _{(0,1)} v g dy-\\int _{\\Omega _L} v( \\rho -1 )\\omega^2 e^{i\\omega x}  d \\Omega\n",
+    "a(u_s,v)=\\int _{\\Omega _L} (\\nabla v\\nabla u_s- \\omega^2 \\rho  u_s v)  d \\Omega\\\\\n",
+    "l(v)=\\int _{\\Omega _L} -f v d \\Omega+\\int _{(0,1)} v g dy+\\int _{\\Omega _L} v( \\rho -1 )\\omega^2 e^{i\\omega x}  d \\Omega\n",
     "\\end{cases}.\n",
     "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "(to do)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 7\n",
+    "Il suffit de demontrer que $K$ est compact en voyant que $A$ et $\\mathscr I$ sont compacts.\n",
+    "\n",
+    "Pour satisfier $\\langle A\\phi,\\phi'\\rangle_{ H^1(\\Omega_L)}=a(\\phi,\\phi')$, c'est à dire:\n",
+    "$$\n",
+    "\\int _{\\Omega _L} (\\nabla \\phi \\nabla \\phi'- \\omega^2 \\rho  \\phi \\phi')  d \\Omega=\\int _{\\Omega _L} (\\nabla (A\\phi) \\nabla \\phi'+ (A\\phi) \\phi')  d \\Omega .\n",
+    "$$\n",
+    "\n",
+    "Avec la décomposition $A=K+\\mathscr I$:\n",
+    "$$\n",
+    "\\int _{\\Omega _L} (\\nabla \\phi \\nabla \\phi'- \\omega^2 \\rho  \\phi \\phi')  d \\Omega=\\int _{\\Omega _L} (\\nabla \\phi \\nabla \\phi'+ \\phi \\phi')  d \\Omega+\\int _{\\Omega _L} (\\nabla (K \\phi) \\nabla \\phi'+ (K \\phi) \\phi')  d \\Omega .\n",
+    "$$\n",
+    "$$\n",
+    "\\int _{\\Omega _L} - \\omega^2 \\rho  \\phi \\phi' d \\Omega=\\int _{\\Omega _L}  \\phi \\phi' d \\Omega+\\int _{\\Omega _L} (\\nabla (K \\phi) \\nabla \\phi'+ (K \\phi) \\phi')  d \\Omega .\n",
+    "$$\n",
+    "\n",
+    "on definie $A: H^1(\\Omega_L) \\to H^1(\\Omega_L)$,\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    " \\forall u \\in H^1(\\Omega), A(u):=\n",
+    "\\begin{cases}\n",
+    "u\\to -\\rho \\omega^2 u\\\\\n",
+    "\\nabla u \\to \\nabla u\n",
+    "\\end{cases}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n",
+    "et\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    " \\forall u \\in H^1(\\Omega), K(u):=A-\\mathscr I =\n",
+    "\\begin{cases}\n",
+    "u\\to \\rho \\omega^2 u-u\\\\\n",
+    "\\nabla u \\to -\\nabla u-\\nabla u\n",
+    "\\end{cases}\n",
+    "\\end{equation}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 8\n",
+    "Avec la calculation directe,\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "R^\\epsilon &= \\frac{i \\omega}{2} \\int_{\\mathscr O} (\\rho(z)^\\epsilon - 1) u^\\epsilon(z) e^{+i \\omega x}  dz\\\\\n",
+    "&= \\frac{i \\omega}{2} \\int_{\\mathscr O} \\epsilon\\mu (u_i+u_s^\\epsilon) e^{+i \\omega x} dz\\\\\n",
+    "&= \\epsilon\\frac{i \\omega}{2} \\int_{\\mathscr O} \\mu  e^{+2i \\omega x}  dz+\\epsilon\\frac{i \\omega}{2} \\int_{\\mathscr O} \\mu u_s^\\epsilon  e^{+i \\omega x}  dz\\\\\n",
+    "&= \\epsilon  dR_{\\epsilon}(0)(\\mu) + \\epsilon  \\tilde{R}_{\\epsilon}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Ou $\\tilde{R}_{\\epsilon}=\\frac{i \\omega}{2} \\int_{\\mathscr O} \\mu u_s^\\epsilon  e^{+i \\omega x}  dz$."
    ]
   }
  ],
