--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -281,7 +281,7 @@
     "\\begin{equation}\n",
     "\\begin{cases}\n",
     "a(u_s,v)=\\int _{\\Omega _L} (\\nabla v\\nabla u_s- \\omega^2 \\rho  u_s v)  d \\Omega\\\\\n",
-    "l(v)=\\int _{\\Omega _L} -f v d \\Omega+\\int _{(0,1)} v g dy+\\int _{\\Omega _L} v( \\rho -1 )\\omega^2 e^{i\\omega x}  d \\Omega\n",
+    "l(v)=-\\int _{\\Omega _L} f v d \\Omega+\\int _{(0,1)} v g dy+\\int _{\\Omega _L} v( \\rho -1 )\\omega^2 e^{i\\omega x}  d \\Omega\n",
     "\\end{cases}.\n",
     "\\end{equation}\n",
     "$$\n",
@@ -294,7 +294,7 @@
    "metadata": {},
    "source": [
     "## Question 7\n",
-    "Il suffit de demontrer que $K$ est compact en voyant que $A$ et $\\mathscr I$ sont compacts.\n",
+    "Il suffit de demontrer que $K$ est compact en voyant que $A$ et $\\mathscr I$ sont linaires.\n",
     "\n",
     "Pour satisfier $\\langle A\\phi,\\phi'\\rangle_{ H^1(\\Omega_L)}=a(\\phi,\\phi')$, c'est à dire:\n",
     "$$\n",
@@ -341,7 +341,7 @@
     "Avec la calculation directe,\n",
     "$$\n",
     "\\begin{align}\n",
-    "R^\\epsilon &= \\frac{i \\omega}{2} \\int_{\\mathscr O} (\\rho(z)^\\epsilon - 1) u^\\epsilon(z) e^{+i \\omega x}  dz\\\\\n",
+    "R^\\epsilon &= \\frac{i \\omega}{2} \\int_{\\mathscr O} (\\rho^\\epsilon(z) - 1) u^\\epsilon(z) e^{+i \\omega x}  dz\\\\\n",
     "&= \\frac{i \\omega}{2} \\int_{\\mathscr O} \\epsilon\\mu (u_i+u_s^\\epsilon) e^{+i \\omega x} dz\\\\\n",
     "&= \\epsilon\\frac{i \\omega}{2} \\int_{\\mathscr O} \\mu  e^{+2i \\omega x}  dz+\\epsilon\\frac{i \\omega}{2} \\int_{\\mathscr O} \\mu u_s^\\epsilon  e^{+i \\omega x}  dz\\\\\n",
     "&= \\epsilon  dR_{\\epsilon}(0)(\\mu) + \\epsilon  \\tilde{R}_{\\epsilon}\n",
@@ -350,6 +350,70 @@
     "\n",
     "Ou $\\tilde{R}_{\\epsilon}=\\frac{i \\omega}{2} \\int_{\\mathscr O} \\mu u_s^\\epsilon  e^{+i \\omega x}  dz$."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 9\n",
+    "\n",
+    "soit $\\mu^j=\\mu^j_i \\chi_{\\mathscr O_i}(z),i\\in\\{1,2,3,4\\}$.\n",
+    "\n",
+    "Or,\n",
+    "\n",
+    "$$\\frac{i \\omega}{2} \\int_{\\mathscr O_i} \\mu_i  e^{+2i \\omega x}  dz=\\frac{\\mu_i}{8} \\int  e^{+2i \\omega x}  d(2 i \\omega x)= \\frac{\\mu_ie^{i \\omega}}{8} .$$\n",
+    "\n",
+    "Directement,\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "0&=\\frac{i \\omega}{2} \\int_{\\mathscr O} \\mu^0  e^{+2i \\omega x}  dz\\\\\n",
+    "0&=\\frac{i \\omega}{2} \\sum_i \\int_{\\mathscr O_i} \\mu_i^0  e^{+2i \\omega x}  dz\\\\\n",
+    "0&=\\sum_i \\frac{\\mu_i^0 e^{i \\omega}}{8}\\\\\n",
+    "0&=\\sum_i \\mu_i^0(i\\in\\{1,2,3,4\\}).\\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "De meme,\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "1&=\\frac{i \\omega}{2} \\int_{\\mathscr O} \\mu^1  e^{+2i \\omega x}  dz\\\\\n",
+    "1&=\\sum_i \\frac{\\mu_i^1 e^{i \\omega}}{8}\\\\\n",
+    "\\sum_i\\mu_i^1&=8e^{-i \\omega}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "et\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "i&=\\frac{i \\omega}{2} \\int_{\\mathscr O} \\mu^2  e^{+2i \\omega x}  dz\\\\\n",
+    "i&=\\sum_i \\frac{\\mu_i^2 e^{i \\omega}}{8}\\\\\n",
+    "\\sum_i\\mu_i^2&=8ie^{-i \\omega} .\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Une fois on a fixées $\\mu^i$, on a des équations: $\\mu_i=\\mu^0_i+\\tau_1 \\mu^1_i+\\tau_2 \\mu^2_i$.\n",
+    "\n",
+    "Prenons $i=1,2$, on resouds la système linaire, alors\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "\\begin{cases}\n",
+    "\\tau_1=\n",
+    "\\end{cases}\n",
+    "\\end{equation}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
