--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -174,7 +174,38 @@
     "\n",
     "Donc \n",
     "$$I^+=2i\\omega s^+$$\n",
-    "$$I^-=2i\\omega s^-$$"
+    "$$I^-=2i\\omega s^-$$\n",
+    "\n",
+    "Finalement pour calculer\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "I &= \\frac{i \\omega}{2} \\int_{\\mathscr O} (\\rho(z) - 1) u(z) e^{+i \\omega x} dz \\\\\n",
+    "  &=\\frac{i }{2\\omega} \\int_{\\mathscr O} (-\\Delta u  - u\\omega^2) e^{+i \\omega x} dz\\\\\n",
+    "  &=\\frac{i }{2\\omega} \\int_{\\mathscr O} (-\\Delta u_s  - u_s\\omega^2) e^{+i \\omega x} dz\\\\\n",
+    "\n",
+    "\\end{align}\n",
+    "$$\n",
+    "On a\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\int_{\\mathscr O} \\Delta u_s e^{+i \\omega x} dz &= \\int_{\\mathscr O} \\nabla \\cdot (\\nabla u_s) e^{+i \\omega x} dz \\\\\n",
+    "  &= \\int_{\\mathscr O} \\nabla \\cdot (\\nabla u_se^{+i \\omega x} ) dz-\\int_{\\mathscr O} \\nabla u_s \\cdot (\\nabla e^{+i \\omega x} ) dz\\\\\n",
+    "    &= \\int_{\\partial \\mathscr O}  \\nabla u_s e^{+i \\omega x}  \\cdot nd\\Gamma-i\\omega\\int_{\\mathscr O} \\frac{\\partial u_s}{\\partial x} e^{+i \\omega x}  dz\\\\\n",
+    "    &= \\int_{\\Sigma_L}  \\frac{\\partial u_s}{\\partial n} e^{+i \\omega x}  dy-i\\omega\\int dy\\int \\frac{\\partial u_s}{\\partial x} e^{+i \\omega x}  dx\\\\\n",
+    "    &= \\int_{\\Sigma_L}  \\frac{\\partial u_s}{\\partial n} e^{+i \\omega x}  dy-i\\omega\\int dy\\int (\\frac{\\partial }{\\partial x} (u_se^{+i \\omega x})- u_s \\frac{\\partial e^{+i \\omega x}}{\\partial x})dx\\\\\n",
+    "    &= \\int_{\\Sigma_L}  \\frac{\\partial u_s}{\\partial n} e^{+i \\omega x}  dy-i\\omega  \\int (u_se^{+i \\omega x})|_{-L}^{L}dy-i\\omega^2 \\int dy \\int u_s  e^{+i \\omega x}dx\\\\\n",
+    "    &= I^- -\\omega^2 \\int_{\\mathscr O} u_s  e^{+i \\omega x}dz.\\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Alor,\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "I &=\\frac{i }{2\\omega} (-I^- +\\omega^2 \\int_{\\mathscr O} u_s  e^{+i \\omega x}dz-\\int_{\\mathscr O}  u_s\\omega^2 e^{+i \\omega x} dz) \\\\\n",
+    "  &=-\\frac{i }{2\\omega}I^-\\\\\n",
+    "  &=s^-=R.\n",
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
